--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jan 27 09:03:18 UTC 2024
+#Sat Jan 27 09:13:42 UTC 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -28,12 +28,12 @@ level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=40
 max-tick-time=60000
 max-world-size=29999984
 motd=A Minecraft Server
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
