--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jan 27 09:55:53 UTC 2024
+#Sat Jan 27 10:25:58 UTC 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -31,7 +31,7 @@ max-chained-neighbor-updates=1000000
 max-players=40
 max-tick-time=60000
 max-world-size=29999984
-motd=A Minecraft Server
+motd=\        \u00A73\u00A7k*\u00A7d\u00A7l\u0x0391 \u00A7c\u00A7lPROJECT ALPHA \u00A7d\u00A7l\u0x0391\u00A73\u00A7k*\u00A7r\n        \u00A7b\u00A7l--------\u00A76\u00A7lWork In Progress\u00A7l\u00A7b--------
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
