--- a/plugins/Plan/config.yml
+++ b/plugins/Plan/config.yml
@@ -4,7 +4,7 @@
 # https://github.com/plan-player-analytics/Plan/wiki/Bukkit-Configuration
 # -----------------------------------------------------
 Server:
-    ServerName: Plan
+    ServerName: ProjectAlpha
 # -----------------------------------------------------
 Plugin:
     Logging:
@@ -288,5 +288,8 @@ Plugins:
     Towny:
         HideTowns:
           - ExampleTown
+# The files are placed in /Plan/web/ if the setting is 'true' when accessed.
 Customized_files:
     Path: "web"
+    Plan:
+        index,html: false
