--- a/plugins/dynmap/markers.yml
+++ b/plugins/dynmap/markers.yml
@@ -12,15 +12,8 @@ sets:
         areas: {
             }
         label: Offline
-        markers:
-            MetaHumanANH:
-                world: world
-                markup: false
-                x: 89.0
-                icon: offlineuser
-                y: 64.0
-                z: 60.0
-                label: MetaHumanANH
+        markers: {
+            }
         lines: {
             }
         layerprio: 0
