--- a/server.properties
+++ b/server.properties
@@ -1,9 +1,8 @@
 #Minecraft server properties
-<<<<<<< HEAD
-#Sat May 18 17:48:54 UTC 2024
-=======
-#Mon Jan 29 11:14:20 UTC 2024
->>>>>>> b76081bb1bca21dcef98f864711eec09a4f3e428
+#Sat May 18 18:06:07 UTC 2024
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=b76081bb1bca21dcef98f864711eec09a4f3e428
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
